# rticonnextdds-gateway-opcua

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  THIRD-PARTY-NOTICES.md
doc/: conf.py  configuration.rst  copyright.rst  extlinks.py  index.rst  installation.rst  introduction.rst  release_notes.rst  tutorials.rst  usage.rst
examples/tutorials/: CMakeLists.txt
examples/tutorials/ddsPublisher/: DdsDemoPublisher.cxx  DdsDemoPublisher.hpp
examples/tutorials/ddsRequester/: CommandlineParser.hpp  Conversions.hpp  Main.cxx  RequesterProperties.hpp
examples/tutorials/opcUaServer/: OpcUaDemoNodeSet.hpp  OpcUaDemoServer.cxx  OpcUaDemoServer.hpp
include/rti/ddsopcua/: DdsOpcUaGateway.hpp  DdsOpcUaGatewayException.hpp  DdsOpcUaGatewayProperty.hpp
include/rti/ddsopcua/detail/: DdsOpcUaGatewayImpl.hpp
include/rti/ddsopcua/log/: LogConfig.hpp
include/rti/ddsopcua/requester/: DdsRequester.hpp
include/rti/ddsopcua/requester/detail/: DdsRequesterOperations.hpp  OpcUaTypes.hpp
resources/python/: requirements.txt
resources/schema/: rti_dds_opcua_service.xsd
resources/templates/: launch_script.bat.in  launch_script.in
resources/xml/: IntegrationTestConfigurations.xml  IntegrationTestTypes.xml  OpcUaBuiltinDataTypes.xml  RTI_DDS_OPCUA_SERVICE.xml
resources/xslt/: rti_ddsopcua_to_router.xslt
src/config/: RtiXmlUtilsDecl.hpp  XmlEntities.cxx  XmlEntities.hpp  XmlSupport.cxx  XmlSupport.hpp  XmlTransformationParams.cxx  XmlTransformationParams.hpp
src/conversion/: DdsDynamicData2OpcUaConversions.cxx  DdsDynamicData2OpcUaConversions.hpp  DdsDynamicDataUtils.cxx  DdsDynamicDataUtils.hpp  OpcUa2DdsDynamicDataConversions.cxx  OpcUa2DdsDynamicDataConversions.hpp
src/conversion/test/: ConversionTests.cxx
src/log/: LogMsg.cxx  LogMsg.hpp  LoggerImpl.cxx
src/opcUaSdk/: OpcUaSdkClient.cxx  OpcUaSdkClient.hpp  OpcUaSdkClientMonitoredItemProperty.hpp  OpcUaSdkClientNodeAttribute.hpp  OpcUaSdkClientProperty.hpp  OpcUaSdkClientSubscriptionProperty.hpp  OpcUaSdkDataTypes.cxx  OpcUaSdkDataTypes.hpp
src/opcUaSdk/test/: OpcUaDataTypesTester.cxx  OpcUaSdkTester.cxx
src/plugins/adapters/: DdsOpcUaAdapter.cxx  DdsOpcUaAdapter.hpp  DdsOpcUaAdapterProperty.cxx  DdsOpcUaAdapterProperty.hpp  OpcUaAttributeServiceStreamReader.cxx  OpcUaAttributeServiceStreamReader.hpp  OpcUaAttributeServiceStreamWriter.cxx  OpcUaAttributeServiceStreamWriter.hpp  OpcUaConnection.cxx  OpcUaConnection.hpp  OpcUaPublishRequestThread.hpp  OpcUaSubscriptionStreamReader.cxx  OpcUaSubscriptionStreamReader.hpp
src/plugins/processors/: OpcUaAttributeServiceProcessor.cxx  OpcUaAttributeServiceProcessor.hpp  OpcUaPublicationProcessor.cxx  OpcUaPublicationProcessor.hpp
src/requester/: DdsRequester.cxx  DdsRequesterOperations.cxx  OpcUaTypes.cxx
src/service/: ApplicationProperty.cxx  ApplicationProperty.hpp  DdsOpcUaService.cxx  ParameterManager.cxx  ParameterManager.hpp  RtiRoutingServiceImplDecl.hpp  Service.cxx  Service.hpp  ServiceProperty.cxx  Utils.hpp
src/serviceApp/: Application.cxx  Application.hpp  Main.cxx
src/serviceApp/test/: ServiceAppTest.cxx
src/test/: IntegrationTest.cxx  Main.cxx  OpcUaTutorialServer.hpp
